Adicionado incrementos e correções

--- a/main.tex
+++ b/main.tex
@@ -86,9 +86,9 @@
 	\maketitle
 
 	\section*{RESUMO}
-	O desenvolvimento de aplicativos móveis trouxe uma série de desafios para a ciência da computação. Com limitações de recursos como a bateria, armazenamento e memória, o desenvolvimento de software para dispositivos móveis impõe requisitos não-funcionais importantes a serem considerados no projeto de aplicativos. Com a popularização da internet e a expansão das redes móveis, os aplicativos tornaram-se popular e projetá-los de forma fácil com componentes de alto nível, baixo acoplamento e bom desempenho não é uma tarefa trivial. Este trabalho apresenta uma arquitetura de referência para o desenvolvimento de aplicativos móveis orientado a plugins no contexto de sistemas de informação, proporcionando baixo acoplamento entre os componentes e escalabilidade de recursos através de plugins, dispondo de componentes genéricos reutilizáveis, além de componentes de alto nível para recursos básicos como requisições HTTP, persistência de dados, notificações ao usuário e comunicação entre objetos através de eventos.
+	O desenvolvimento de aplicativos móveis trouxe uma série de desafios para a ciência da computação. Com limitações de recursos como a bateria, armazenamento e memória, o desenvolvimento de software para dispositivos móveis impõe requisitos não-funcionais importantes a serem considerados no projeto de aplicativos. Com a popularização da internet e a expansão das redes móveis, os aplicativos tornaram-se popular e projetá-los de forma fácil com componentes de alto nível, baixo acoplamento e bom desempenho não é uma tarefa trivial. Este trabalho apresenta uma arquitetura de referência para o desenvolvimento de aplicativos móveis orientado a plugins no contexto de sistemas de informação, proporcionando baixo acoplamento entre os componentes e escalabilidade de recursos através de plugins, além de componentes reusáveis de alto nível para recursos básicos como acesso a rede, persistência de dados, notificações do aplicativo e comunicação entre objetos através de eventos.
 
-	\keywords{Aplicativos Móveis; Arquitetura de Software; Sistemas de Informação.}
+	\keywords{Aplicativos Móveis; Arquitetura de Software; Qt; Sistemas de Informação.}
 
 	% sections
 	\input{sections/1-introducao.tex}
