--- a/references.bib
+++ b/references.bib
@@ -44,6 +44,41 @@
 %end introduction%
 
 %start bibliography%
+@online{doc_qt_io,
+    author = "Qt",
+    title  = "QML Applications",
+    month  = "jan",
+    year   = "2018",
+    url    = "http://doc.qt.io/qt-5/qmlapplications.html"
+}
+
+@misc{qt_software,
+    author = "Wikipedia",
+    title  = "About Qt (software)",
+    month  = "jan",
+    year   = "2018",
+    url    = "https://en.wikipedia.org/wiki/Qt_(software)",
+    	howpublished = "\url{https://en.wikipedia.org/wiki/Qt_(software)}"
+}
+
+@misc{qt_io,
+    author = "The Qt Company",
+    title  = "Qt – Cross-platform software development for embedded and desktop",
+    month  = "jan",
+    year   = "2018",
+    url    = "https://www.qt.io/",
+	howpublished = "\url{https://www.qt.io/}"
+}
+
+@online{qt_gui_toolkit,
+    author = "Linux Journal",
+    title  = "Qt GUI Toolkit",
+    month  = "jan",
+    year   = "2018",
+    url    = "http://www.linuxjournal.com/article/201",
+    	howpublished = "\url{http://www.linuxjournal.com/article/201}"
+}
+
 @misc{jair_Cavalcanti_leite,
 	title = {Design da Arquitetura de Componentes de Software},
 	author = {Jair Cavalcanti Leite},
