--- a/sections/2-referencial-bibliografico.tex
+++ b/sections/2-referencial-bibliografico.tex
@@ -2,11 +2,12 @@
 %<apresentar uma pequena descrição dos assuntos apresentados nas sub-seções seguintes>%
 %<Um último parágrafo ligando estes quatro temas, sem ainda dizer o que você vai fazer>%
 \section{REFERENCIAL BIBLIOGRÁFICO}
-Esta seção, apresenta as principais referências que contextualizam este trabalho. A subseção 2.1 apresenta o Qt e o QML. A subseção 2.2 descreve sobre Arquitetura de Software. A subseção 2.3 resume Sistemas de Informação. A subseção 2.4 apresenta Arquitetura de Referência para Sistemas de Informação. A subseção 2.5 apresenta de forma geral Arquiteturas de Aplicativos Móveis. A subseção 2.7 faz uma breve revisão sobre Projetos de Aplicativos Móveis. A subseção 2.8 destaca sobre Desenvolvimento de Software Orientado a Componentes. Para finalizar, a subseção 2.9 faz uma breve revisão sobre tecnologias suportadas nesta arquitetura: \textit{web services}, o estilo arquitetural \textit{REST}, o \textit{Push Notification} e o JSON.
+Esta seção, apresenta as principais referências que contextualizam este trabalho. A subseção 2.1 apresenta o Qt e o qml. A subseção 2.2 descreve sobre Arquitetura de Software. A subseção 2.3 apresenta Arquitetura de Referência. A subseção 2.4 resume Sistemas de Informação. A subseção 2.5 apresenta Arquiteturas de Aplicativos Móveis. A subseção 2.6 detalha Projetos de Aplicativos Móveis. A subseção 2.7 discute sobre Desenvolvimento de Software Orientado a Componentes. Para finalizar, a subseção 2.8 faz uma breve revisão sobre as tecnologias suportadas nesta arquitetura: \textit{web services}, o estilo arquitetural \textit{RESTFul}, o \textit{Push Notification} e o JSON.
 
 
-\subsection{O Qt e o QML}
-O Qt é um \textit{toolkit} \textit{cross-platform} para desenvolvimento de aplicações com interface gráfica. O Qt é muito mais que um SDK, ele é uma estratégia de tecnologia que permite ao desenvolvedor, de forma rápida e econômica, projetar, desenvolver, implementar e manter uma aplicação multiplataforma oferecendo uma experiência de usuário perfeita em todos os dispositivos \cite{https://qt.io}. No entanto, programas sem interface gráfica podem ser desenvolvidos, como ferramentas de linha de comando e consoles para servidores \cite{https://en.wikipedia.org/wiki/Qt_(software)}. O Qt possui um amplo apoio à internacionalização e outros recursos incluem acesso a um banco de dados SQL, parsing de XML, parsing de JSON, gerenciamento de threads e suporte de rede \cite{http://www.linuxjournal.com/article/201}. O Qt dispõe ainda de uma linguagem declarativa e interpretada para contruir interface gráfica, o QML. QML é uma especificação de interface de usuário e linguagem de programação. Ele permite que desenvolvedores e designers criem aplicativos de alta performance, fluidamente animados e visualmente atraentes. O QML oferece uma sintaxe JSON, altamente legível e declarativa, com suporte para expressões imperativas JavaScript combinadas com ligações de propriedades dinâmicas \cite{http://doc.qt.io/qt-5/qmlapplications.html}.
+\subsection{O Qt e o qml}
+O Qt é um \textit{toolkit} \textit{cross-platform} para desenvolvimento de aplicações com interface gráfica. O Qt é muito mais que  um SDK, ele é uma estratégia de tecnologia que permite ao desenvolvedor, de forma rápida e econômica, projetar, desenvolver, implementar e manter uma aplicação multiplataforma oferecendo uma experiência de usuário perfeita em todos os dispositivos \cite{qt_io}. No entanto, programas sem interface gráfica podem ser desenvolvidos, como ferramentas de linha de comando e consoles para servidores \cite{qt_software}.\par
+O Qt possui um amplo apoio à internacionalização e outros recursos, tais como o acesso a um banco de dados \textit{SQL}, \textit{parsing} de XML, \textit{parsing} de JSON, gerenciamento de \textit{threads} e suporte a rede \cite{qt_gui_toolkit}. O Qt dispõe ainda de uma linguagem declarativa e interpretada para construir interface gráfica, o qml. O qml é uma especificação de interface de usuário e linguagem de programação que permite a desenvolvedores e designers criar aplicativos de alta performance, fluidamente animados e visualmente atraentes. O qml oferece uma sintaxe JSON, altamente legível e declarativa, com suporte para expressões imperativas JavaScript combinadas com ligações de propriedades dinâmicas \cite{doc_qt_io}.
 
 
 %<dizer os benefícios em trabalhar orientado a arquiteturas: controle intelectual, atendimento de requisitos não-funcionais, evolução, \textit{testability}, etc>%
@@ -35,30 +36,31 @@ Neste trabalho, arquitetura de software pode ser compreendida nas decisões de i
 %A arquitetura de um software pode ser representada de vários pontos de vista, que podem ser combinados para criar uma visão holística do sistema \cite{guideline:architectural_view}. As visões arquiteturais são diferentes formas de observar a arquitetura de um software, cada qual ressaltando aspectos específicos e relevantes conforme o papel da pessoa que está definindo a arquitetura e a etapa do processo de desenvolvimento em que ela se encontra \cite{Raymond1995}. Os requisitos funcionais implementados nesta arquitetura serão apresentados em um tópico seguinte em visões arquiteturais através de imagens e diagramas da UML. O objetivo das visões é facilitar a compreensão das partes que compõe esta arquitetura.
 
 
+\subsection{Arquitetura de Referência}
+Uma arquitetura de referência consiste em uma forma de apresentar um padrão genérico para um projeto \cite{zambiasi}. Com base nessa arquitetura, o desenvolvedor projeta, desenvolve e configura uma aplicação prototipando-a por meio de componentes reutilizáveis \cite{zambiasi}. Para compor uma arquitetura de referência é necessário apresentar os tipos dos elementos envolvidos, como eles interagem e o mapeamento das funcionalidades para estes elementos \cite{Hofmeister:1999:ASA:322640}. De maneira geral, uma arquitetura de referência deve abordar os requisitos para o desenvolvimento de soluções, guiado pelo modelo de referência e por um estilo arquitetural de forma a atender as necessidades do projeto \cite{c._k_f._2006}.\par
+
+A concepção de uma arquitetura de referência pode ser entendida neste trabalho como uma forma de disponibilizar um padrão genérico para o desenvolvimento de novos aplicativos no contexto de sistemas de informação, partindo de quatro requisitos funcionais que serão apresentados em uma sessão mais adiante.\par
+
+
 \subsection{Sistemas de Informação}
-Um sistema de informação pode ser definido como um conjunto de componentes inter-relacionados trabalhando juntos para coletar, recuperar, processar, armazenar e distribuir informações com a finalidade de facilitar o planejamento, o controle, a coordenação, a análise e o processo decisório em organizações \cite{laudon}. O escopo desta arquitetura está destinado a Sistemas de Informação, porém, não está limitado somente a este tipo de software, pois os elementos visuais, estruturais e comportamentais do sistema devem ser desenvolvidos usando plugins que podem se comunicar, persistir dados e conectar a internet de forma facilitada, usando qml. No entanto, os requisitos funcionais atendidos por esta arquitetura são muito comuns em Sistemas de Informação e criar um aplicativo para este segmento em um curto prazo e com boa qualidade, é o principal objetivo deste trabalho.
+Um sistema de informação pode ser definido como um conjunto de componentes inter-relacionados trabalhando juntos para coletar, recuperar, processar, armazenar e distribuir informações com a finalidade de facilitar o planejamento, o controle, a coordenação, a análise e o processo decisório em organizações \cite{laudon}.\par
+O escopo desta arquitetura está focado em sistemas de informação, porém, não está limitado somente a este tipo de software. Os requisitos de um aplicativo baseado nesta arquitetura, devem ser implementados através de plugins que podem se comunicar, persistir dados e conectar à internet de forma facilitada, usando APIs de alto nível. No entanto, os requisitos funcionais atendidos por esta arquitetura são muito comuns em sistemas de informação e este projeto tem o objetivo de facilitar a construção de aplicativos para este segmento.
 
 
-\subsection{Arquitetura de Referência para Sistemas de Informação}
-Uma arquitetura de referência consiste em uma forma de apresentar um padrão genérico para um projeto \cite{zambiasi}. Com base nessa arquitetura, o desenvolvedor projeta, desenvolve e configura uma aplicação prototipando-a por meio de componentes reutilizáveis \cite{zambiasi}.\par
-
-Para compor uma arquitetura de referência é necessário apresentar os tipos dos elementos envolvidos, como eles interagem e o mapeamento das funcionalidades para estes elementos \cite{Hofmeister:1999:ASA:322640}. De maneira geral, uma arquitetura de referência deve abordar os requisitos para o desenvolvimento de soluções, guiado pelo modelo de referência e por um estilo arquitetural de forma a atender as necessidades do projeto \cite{c._k_f._2006}. A concepção de uma arquitetura de referência pode ser entendida neste trabalho como uma forma de disponibilizar um padrão genérico para o desenvolvimento de novos aplicativos no contexto de sistemas de informação.\par
-
-
-\subsection{Arquiteturas de Aplicativos Mobile}
-Arquitetura para aplicações móveis abrange quatro camadas: Interação Humana-Computador (\textit{IHC}), Aplicação Móvel, \textit{Middleware} e \textit{Enterprise Backend} \cite{Pabllo:2008:MMA:1621087.1621128}. Neste trabalho, a arquitetura foi concentrada apenas nas camadas de interação, aplicação e \textit{Middleware}.
+\subsection{Arquiteturas de Aplicativos Móveis}
+Arquitetura para aplicações móveis abrange quatro camadas: Interação Humana-Computador, Aplicação Móvel, \textit{Middleware} e \textit{Enterprise Backend} \cite{Pabllo:2008:MMA:1621087.1621128}. Neste trabalho, a arquitetura foi concentrada apenas nas camadas de interação, aplicação e \textit{middleware}.
 
 \subsubsection{Camada de Interação Humana-Computador}
-A camada de Interação Humana-Computador (mais conhecida como IHC, interface de usuário ou simplesmente UI) define os elementos de interação entre o usuário e os recursos do aplicativo. De forma abstrata, a camada de interface do usuário descreve o tipo de mídia suportada pelo aplicativo (por exemplo, texto, gráficos, imagens, vídeo ou som), os tipos de mecanismos de entrada (por exemplo, teclado alfa-numérico, ponteiros de caneta ou toques na tela) e os tipos de mecanismos de saída (por exemplo, uma notificação na bandeja do sistema, a tela, os alto-falantes ou algum tipo de \textit{feedback} como vibrar o dispositivo) \cite{Pabllo:2008:MMA:1621087.1621128}. Um exemplo de um componente desta camada é o objeto \textit{Image} do qml que corresponde ao carregamento e exibição de uma imagem na tela.
+A camada de Interação Humana-Computador (mais conhecida como \textit{IHC}, interface de usuário ou simplesmente \textit{UI}) define os elementos de interação entre o usuário e os recursos do aplicativo. De forma abstrata, a camada de interface do usuário descreve o tipo de mídia suportada pelo aplicativo (por exemplo, texto, gráficos, imagens, vídeo ou som), os tipos de mecanismos de entrada (por exemplo, teclado alfa-numérico, ponteiros de caneta ou toques na tela) e os tipos de mecanismos de saída (por exemplo, uma notificação na bandeja do sistema, a tela, os alto-falantes ou algum tipo de \textit{feedback} como vibrar o dispositivo) \cite{Pabllo:2008:MMA:1621087.1621128}. Um exemplo de um componente desta camada é o objeto \textit{Image} do qml que corresponde ao carregamento e exibição de uma imagem na tela.
 
 \subsubsection{Camada de Aplicação}
-A camada de aplicação corresponde ao processamento de ações e eventos provenientes da camada de interação, como por exemplo, captando eventos de toque em objetos visuais e realizando processamento em segundo plano. Esta camada, corresponde a componentes não visuais e interagem diretamente com a camada de \textit{middleware}. Objetos da camada de aplicação podem por exemplo, gerenciar e controlar a criação de outros objetos. Um exemplo de objeto desta camada é o \textit{StackView} do qml, que carrega páginas dinamicamente.
+A camada de aplicação corresponde ao processamento de ações e eventos provenientes da camada de interação com o usuário, como por exemplo, escutando eventos de toque e realizando processamento em segundo plano. Esta camada, corresponde a componentes não visuais e interagem diretamente com a camada de \textit{middleware}. Objetos da camada de aplicação podem por exemplo, gerenciar e controlar a criação de outros objetos. Um exemplo de objeto desta camada é o \textit{Loader} do qml, ele cria objetos dinamicamente e emite um sinal quando o item recém criado estiver pronto.
 
 \subsubsection{Camada de Middleware}
-A camada de \textit{middleware} intercala entre a camada de aplicação com a camada de \textit{backend}. O objetivo dessa camada é fornecer de forma abstrata e genérica um meio de comunicação entre o modelo de dados da aplicação com a camada de \textit{backend} \cite{Pabllo:2008:MMA:1621087.1621128}. Ela é também responsável por interagir com o meio de comunicação disponível no dispositivo abstraindo para a camada de aplicação qual foi a interface de hardware utilizada. Objetos da camada de \textit{middleware} podem ser executados de forma assíncrona para que não bloqueiem os eventos da tela para o usuário, enquanto aguardam um feedback da camada de \textit{backend} para permitir melhor desempenho e usabilidade da aplicação. Um exemplo de objeto que trabalha nessa camada é o resposável por realizar requisições HTTP ao serviço Rest.
+A camada de \textit{middleware} intercala entre a camada de aplicação com a camada de \textit{backend}. O objetivo dessa camada é fornecer de forma abstrata e genérica um meio de comunicação entre o modelo de dados da aplicação com a camada de \textit{backend} \cite{Pabllo:2008:MMA:1621087.1621128}. Ela é também responsável por interagir com o meio de comunicação disponível no dispositivo abstraindo para a camada de aplicação qual foi a interface de hardware utilizada. Um exemplo de objeto que trabalha nessa camada é o \textit{RequestHttp} disponibilizado nesta arquitetura, ele é resposável por realizar requisições HTTP ao \textit{web service} de forma assíncrona, notificando o objeto da camada de aplicação quando a resposta for obtida.
 
 \subsubsection{Camada de Backend}
-A camada \textit{backend} consiste de uma outra aplicação que responde pelas requisições do aplicativo através de uma rede via protocolo \textit{HTTP}. Esta camada está associada ao \textit{web service} ou serviço REST. O \textit{web service} pode atender a diferentes requisições e dispositivos, além de abstrair para a aplicação, toda lógica de negócios referente ao armazenamento e processamento dos dados do sistema. A implementação desta camada pode ser desenvolvida sobre uma outra arquitetura, além de implementar regras de negócio inerentes ao seu funcionamento e portanto, não será detalhada neste trabalho.
+A camada \textit{backend} consiste de uma outra aplicação que responde pelas requisições do aplicativo através de uma rede via protocolo \textit{HTTP}. Esta camada está associada ao \textit{web service} ou serviço REST. O \textit{web service} pode atender a diferentes requisições e dispositivos, além de abstrair para o cliente, a lógica de negócios referente ao armazenamento e processamento dos dados entregues como resposta das requisições. A implementação desta camada pode ser desenvolvida sobre uma outra arquitetura, além de implementar regras de negócio inerentes ao seu funcionamento e portanto, não será detalhada neste trabalho.
 
 
 %<definir o que é um aplicativo móvel: de onde surgiu esse termo? Porque aplicativo e não aplicação ou mesmo software?>%
@@ -66,19 +68,19 @@ A camada \textit{backend} consiste de uma outra aplicação que responde pelas r
 %<características particulares dos aplicativos móveis.O que fazem eles diferentes das aplicações web, desktop, em cloud, etc?>%
 %<demandas arquiteturais trazidas pelos aplicativos móveis>%
 \subsection{Projeto de Aplicativos Móveis}
-Um projeto é um esforço temporário empreendido para criar um produto, serviço ou resultado exclusivo. O termo temporário quer dizer que o projeto possui um ciclo de vida com início e final determinados \cite{governanadetidotcom}. O projeto termina quando seus objetivos forem alcançados ou quando existirem motivos para não continuá-lo \cite{governanadetidotcom}. Um aplicativo móvel ou aplicação móvel ou simplesmente \textit{app}, é um sistema desenvolvido para ser instalado e executado em um dispositivo eletrônico portátil, como tablets e smartphones \cite{what_is_mobile}.\par
+Um projeto é um esforço temporário empreendido para criar um produto, serviço ou resultado exclusivo. O termo temporário quer dizer que o projeto possui um ciclo de vida com início e final determinados \cite{governanadetidotcom}. O projeto termina quando seus objetivos forem alcançados ou quando existirem motivos para não continuá-lo \cite{governanadetidotcom}.\par
 
-Um aplicativo móvel pode ser baixado diretamente no aparelho eletrônico, desde que o dispositivo possua conexão com a Internet. O mercado de dispositivos móveis é ramificado por diferentes fabricantes, o que inclui uma variação de plataformas de desenvolvimento, sistemas operacionais, versões do SO e configuração variada de hardware. Na construção de um aplicativo para dispositivo móvel, a implementação é um ponto muito importante, pois, além de representar a parte concreta dos requisitos funcionais do aplicativo também refletem diretamente nos requisitos não funcionais e consequentemente na qualidade do software.\par
+Um aplicativo móvel ou aplicação móvel ou simplesmente \textit{app}, é um sistema desenvolvido para ser instalado e executado em um dispositivo eletrônico portátil, como tablets e smartphones \cite{what_is_mobile}. Um aplicativo móvel pode ser baixado diretamente no aparelho eletrônico, desde que o dispositivo possua conexão com a Internet. O mercado de dispositivos móveis é ramificado por diferentes fabricantes, o que inclui uma variação de plataformas de desenvolvimento, sistemas operacionais, versões do SO e configuração variada de hardware. Na construção de um aplicativo para dispositivo móvel, a implementação é um ponto muito importante, pois, além de representar a parte concreta dos requisitos funcionais do aplicativo também refletem diretamente nos requisitos não funcionais e consequentemente na qualidade do software e na satisfação do usuário.\par
 
 O sucesso de aplicativos para dispositivos móveis vai além das medidas de desempenho, portabilidade e usabilidade tradicionais \cite{Kronbauer:2012:UEE:2393536.2393582}. Os aplicativos devem estar em conformidade com a personalidade, preferências, objetivos, experiências e conhecimento de seus usuários \cite{Vermeeren:2010:UEE:1868914.1868973}. Além disso, o contexto físico, social e virtual onde ocorrem as interações deve, sempre que possível, ser levado em consideração \cite{McCarthy:2004:TE:1015530.1015549}.\par
 
-Torna-se evidente que são muitos requisitos a serem considerados em um projeto de aplicativo móvel. O esforço dedicado para atender a todos os requisitos pode tornar o projeto enfadonho, além de exigir tempo e mão de obra. O processo de desenvolvimento pode ser otimizado através de ferramentas como \textit{frameworks} ou uma arquitetura de software que disponha de componentes reutilizáveis e fácil extensibilidade através de plugins.
+Torna-se evidente que são muitos requisitos a serem considerados em um projeto de um aplicativo móvel. O esforço dedicado para atender a todos os requisitos pode tornar o projeto enfadonho, além de exigir tempo e mão de obra. O processo de desenvolvimento pode ser otimizado através de ferramentas como \textit{frameworks} ou uma arquitetura de software que disponha de componentes reutilizáveis e fácil extensibilidade através de plugins.
 
 
 \subsection{Desenvolvimento de Software Orientado a Componentes}
 O desenvolvimento de software Orientado a componentes é um paradigma da engenharia de software caracterizado pela composição de partes já existentes, ou desenvolvidas independentemente e que são integradas para atingir um objetivo final \cite{rafael_heider}. Construir novas soluções pela combinação de componentes desenvolvidos aumenta a qualidade e dá suporte ao rápido desenvolvimento, levando à diminuição do tempo de entrega do produto final ao mercado \cite{rafael_heider}. Os sistemas definidos através da composição de componentes permitem que sejam adicionadas, removidas e substituídas partes do sistema sem a necessidade de sua completa substituição. Com isso, o desenvolvimento baseado em componentes auxilia na manutenção do software, por permitir que o sistema seja atualizado através da integração de novos componentes ou atualização dos objetos já existentes \cite{szyperski_bosch_weck_1999}.\par
 
-O reuso de componentes é um recurso extra desta arquitetura, pois dispõe de dezesseis componentes (visuais e não visuais) reutilizáveis para auxiliar no desenvolvimento de novos aplicativos, seguindo algumas restrições devido o escopo reduzido desta arqutitura que é sistemas de informação. Estes componentes são arquivos qml genéricos que podem atender a diferentes customizações através das propriedades disponibilizadas pelos seus elementos internos, que permitem definir ou alterar os valores pre-definidos. Os benefícios da componentização estão ligados a manutenibilidade, reúso, composição, extensibilidade, integração e escalabilidade \cite{D'Souza:1998:OCF:291139}.\par
+O reuso de componentes é um recurso desta arquitetura, pois dispõe de dezesseis componentes (visuais e não visuais) para auxiliar no desenvolvimento de novos aplicativos. Esses componentes são arquivos qml que podem atender a diferentes customizações através das propriedades disponibilizadas pelos objetos internos de cada componente. Os benefícios da componentização estão ligados a manutenibilidade, reúso, extensibilidade e escalabilidade \cite{D'Souza:1998:OCF:291139}.
 
 
 %<introducao aos servicos web>%
@@ -89,15 +91,13 @@ O reuso de componentes é um recurso extra desta arquitetura, pois dispõe de de
 \subsection{Web Services, RESTful, Push Notification e JSON}
 \textit{Web Services} constituem uma tecnologia emergente da Arquitetura Orientada a Serviços (SOA) \cite{perepletchikov}. Com a expansão da internet e a necessidade de integração entre aplicações web, tornou-se necessário a centralização de informações para serem acessados por diferentes clientes. Para esse propósito, foi criada a tecnologia de \textit{web services} \cite{ibm_research}. 
 
-\textit{RESTFul} é um estilo arquitetural para a construção de sistemas distribuídos \cite{fielding}. O elemento fundamental da arquitetura RESTful é o \textit{resource} ou recurso. Um recurso pode ser uma página web contendo um documento estruturado, uma imagem ou até mesmo um vídeo. Para localizar os recursos envolvidos em uma interação entre os componentes da arquitetura RESTful é utilizado o chamado identificador de recurso ou \textit{URI}. Com isso, um recurso pode ser representado através de diferentes formatos e o mais comum e utilizado é o \textit{JSON}. O termo \textit{REST}, é empregado em serviços \textit{RESTful} que não implementam todos os princípios da especificação do estilo arquitetural definido por \textit{Fielding} \cite{fielding}. Para que todos os princípios deste estilo sejam respeitados, um conjunto de restrições deve ser seguido, os quais não serão abordados neste trabalho. Para facilitar a compreensão geral de um serviço \textit{REST}, a imagem à seguir foi adicionada para representar um modelo de comunicação entre um cliente ou dispositivo e um serviço \textit{RESTful}.
+\textit{RESTFul} é um estilo arquitetural para a construção de sistemas distribuídos \cite{fielding}. O elemento fundamental da arquitetura \textit{RESTful} é o \textit{resource} ou recurso. Um recurso pode ser uma página web contendo um documento estruturado, uma imagem ou até mesmo um vídeo. Para localizar os recursos envolvidos em uma interação entre os componentes da arquitetura \textit{RESTful} é utilizado o chamado identificador de recurso ou \textit{URI}. Com isso, um recurso pode ser representado através de diferentes formatos e o mais comum e utilizado é o \textit{JSON}.
 
-% Adicionar uma imagem mostrando uma arquiteura RESTful %
+% Adicionar uma imagem mostrando uma arquiteura RESTful ?? %
 
-\textit{Push Notification} é descrito por Acer et al. \cite{Acer:2015:EES:2902314.2902344} como mensagens pequenas, usadas por aplicações de celular para informar aos usuários sobre novos eventos e atualizações. As notificações na maioria dos casos, estão associadas aos aplicativos instalados no dispositivo. O termo \textit{push} indica que a mensagem parte do servidor para o dispositivo. Os principais provedores de notificações via \textit{push} são o \textit{Apple Push Notification Server} (APN) e o \textit{Firebase} antigo \textit{Google Cloud Messaging}. A imagem à seguir, apresenta o modelo de comunicação que ocorre no envio de um \textit{Push Notification}.\par
+\textit{Push Notification} é descrito por \textit{Acer et al.} \cite{Acer:2015:EES:2902314.2902344} como mensagens pequenas, usadas por aplicações de celular para informar aos usuários sobre novos eventos e atualizações. As notificações na maioria dos casos, estão associadas aos aplicativos instalados no dispositivo. O termo \textit{push} indica que a mensagem parte do servidor para o dispositivo. Os principais provedores de notificações via \textit{push} são o \textit{Apple Push Notification Server} (APN) e o \textit{Firebase} antigo \textit{Google Cloud Messaging}.
 
-% Adicionar uma imagem mostrando Push Notification %
+% Adicionar uma imagem mostrando Push Notification ?? %
 
 \textit{JSON} (\textit{JavaScript Object Notation}) é um conjunto de chaves e valores, que podem
-ser interpretados por qualquer linguagem. Além de ser um formato de troca de dados largamente utilizado em serviços RESTFul, é fácil de ser entendido e escrito pelos programadores. Estas propriedades fazem do JSON um objeto ideal para o intercâmbio de dados em aplicações web tal como o XML \cite{jun_y_zhishu}.
-
-% Adicionar uma imagem mostrando um modelo de JSON propriedade->tipo_>valor %
+ser interpretados por qualquer linguagem. Além de ser um formato de troca de dados largamente utilizado em serviços \textit{RESTFul}, é fácil de ser entendido e escrito pelos programadores. Estas propriedades fazem do JSON um objeto ideal para o intercâmbio de dados em aplicações web tal como o XML \cite{jun_y_zhishu}.
