--- a/sections/3-trabalhos-relacionados.tex
+++ b/sections/3-trabalhos-relacionados.tex
@@ -8,7 +8,7 @@
 % -----------------------------------------------------------
 
 \section{TRABALHOS RELACIONADOS}
-Nesta seção, serão apresentado os trabalhos relacionados com este projeto. Para cada trabalho relacionado, será descrito um resumo extraído do próprio artigo ou monografia e no final da seção, contém uma tabela que compara as principais características deste projeto com os trabalhos relacionados.\par
+Nesta seção, serão apresentado os trabalhos relacionados com este projeto. Para cada trabalho relacionado, será descrito um resumo extraído do próprio artigo ou monografia e no final de cada subsessão, será exibido uma tabela comparando as principais características deste projeto com o trabalho relacionado.\par
 
 %artigo 1%
 \textbf{Arquitetura de Referência para o Desenvolvimento de Sistemas Colaborativos Móveis Baseados em Componentes} \cite{melotti_2014}
