--- a/sections/3-trabalhos-relacionados.tex
+++ b/sections/3-trabalhos-relacionados.tex
@@ -8,14 +8,15 @@
 % -----------------------------------------------------------
 
 \section{TRABALHOS RELACIONADOS}
-Nesta seção, serão apresentado os trabalhos relacionados com este projeto. Para cada trabalho relacionado, será descrito um resumo extraído do próprio artigo ou monografia e no final de cada subsessão, será exibido uma tabela comparando as principais características deste projeto com o trabalho relacionado.\par
+Nesta seção, serão apresentados os trabalhos relacionados com este projeto. Para cada trabalho relacionado, será descrito um resumo extraído do próprio artigo ou monografia e no final de cada subseção, será exibido uma tabela comparando as principais características deste projeto com o trabalho relacionado.\par
 
 %artigo 1%
 \textbf{Arquitetura de Referência para o Desenvolvimento de Sistemas Colaborativos Móveis Baseados em Componentes} \cite{melotti_2014}
 \par
-A arquitetura de referência proposta, denominada CReAMA – \textit{Component-Based Reference Architecture for Collaborative Mobile Applications}, teve como principal objetivo orientar o desenvolvimento de sistemas colaborativos móveis baseados em componentes para a plataforma Android. Sistemas desenvolvidos de acordo com essa arquitetura, devem dar suporte ao desenvolvimento de componentes e à criação de aplicações colaborativas por meio da composição desses componentes. As aplicações e componentes são desenvolvidos para plataformas móveis, facilitando o uso de recursos inerentes a essas plataformas, tais como informações de sensores embarcados. Com base na arquitetura de referência, o desenvolvedor poderá ser guiado para criar componentes e compor novas aplicações seguindo os padrões estabelecidos. Por exemplo, será possível construir \textit{toolkits} que forneçam componentes para um domínio específico. É importante ressaltar que a arquitetura foi definida considerando-se: aspectos da plataforma móvel, de sistemas colaborativos e da própria orientação a componentes. Com relação à plataforma móvel, optou-se por uma plataforma específica, visando-se a definição de uma arquitetura otimizada para as características da respectiva plataforma. A arquitetura proposta dará suporte ao desenvolvimento de novos sistemas baseados em componentes, considerando também aspectos relativos à comunicação com a Web.\par
+A arquitetura de referência proposta, denominada CReAMA – \textit{Component-Based Reference Architecture for Collaborative Mobile Applications}, teve como principal objetivo orientar o desenvolvimento de sistemas colaborativos móveis baseados em componentes para a plataforma Android. Sistemas desenvolvidos de acordo com essa arquitetura, devem dar suporte ao desenvolvimento de componentes e à criação de aplicações colaborativas por meio da composição desses componentes.\par
+As aplicações e componentes são desenvolvidos para plataformas móveis, facilitando o uso de recursos inerentes a essas plataformas, tais como informações de sensores embarcados. Com base na arquitetura de referência, o desenvolvedor poderá ser guiado para criar componentes e compor novas aplicações seguindo os padrões estabelecidos. Por exemplo, será possível construir \textit{toolkits} que forneçam componentes para um domínio específico. É importante ressaltar que a arquitetura foi definida considerando-se: aspectos da plataforma móvel, de sistemas colaborativos e da própria orientação a componentes. Com relação à plataforma móvel, optou-se por uma plataforma específica, visando-se a definição de uma arquitetura otimizada para as características da respectiva plataforma.\par
 
-O trabalho proposto por Maison Melotti se relaciona com este trabalho pelo fato de terem objetivos semelhantes, que é propor uma arquitetura para facilitar o desenvolvimento de aplicativos móveis, permitindo o reuso facilitado de componentes. Apesar de estarem focados em domínios diferentes, os trabalhos se relacionam no atendimento de três requisitos funcionais, e são eles, o cache de dados (persistência local), notificações do sistema (local e \textit{push notification}), acesso a rede e o provimento de componentes reutilizáveis pelas aplicações baseadas na arquitetura proposta. A tabela a seguir, apresenta as principais características deste trabalho com o trabalho de Melotti.
+O trabalho proposto por Maison Melotti se relaciona com este trabalho pelo fato de terem objetivos semelhantes, que é propor uma arquitetura para facilitar o desenvolvimento de aplicativos móveis, permitindo o reuso facilitado de componentes. Apesar de estarem focados em domínios diferentes, os trabalhos se relacionam no atendimento de três requisitos funcionais: o cache de dados (persistência local); notificações do aplicativo (local e \textit{push notification}) e acesso a rede. A tabela à seguir, apresenta as principais características deste trabalho com o trabalho de Melotti.
 
 \begin{table}[H]
 % O \small reduz o font-size da tabela
@@ -24,11 +25,12 @@ O trabalho proposto por Maison Melotti se relaciona com este trabalho pelo fato 
 \begin{tabular}{|c|c|c|}
 \hline
 Recurso & Este trabalho & CReAMA \\ \hline
-\begin{tabular}[c]{@{}c@{}}Provê suporte multiPlataforma\\ mobile Android e iOS\end{tabular} & Sim & Não \\ \hline
-\begin{tabular}[c]{@{}c@{}}Provê suporte a\\ Plataforma Desktop\end{tabular} & Sim & Sim \\ \hline
+\begin{tabular}[c]{@{}c@{}}Provê suporte multiplataforma\\ mobile Android e iOS\end{tabular} & Sim & Não \\ \hline
+\begin{tabular}[c]{@{}c@{}}Provê suporte a\\ plataforma desktop\end{tabular} & Sim & Não \\ \hline
 \begin{tabular}[c]{@{}c@{}}Provê recursos extensíveis\\ através de plugins\end{tabular} & Sim & Não \\ \hline
-\begin{tabular}[c]{@{}c@{}}Provê APIs de alto nível para recursos\\ de Rede (HTTP), banco de dados e UI\end{tabular} & Sim & Não \\ \hline
+\begin{tabular}[c]{@{}c@{}}Provê APIs de alto nível para recursos\\ de rede (HTTP), banco de dados e UI\end{tabular} & Sim & Sim \\ \hline
 \begin{tabular}[c]{@{}c@{}}Provê suporte a\\ reuso de componentes\end{tabular} & Sim & Sim \\ \hline
+\begin{tabular}[c]{@{}c@{}}Provê suporte a\\ comunicação por eventos\end{tabular} & Sim & Não \\ \hline
 \end{tabular}
 \caption{Tabela comparativa desta arquitetura com \textit{CReAMA}.}
 \end{table}
@@ -36,9 +38,10 @@ Recurso & Este trabalho & CReAMA \\ \hline
 
 %artigo 2%
 \textbf{MoCA: Arquitetura para o Desenvolvimento de Aplicações Sensíveis ao Contexto para Dispositivos Móveis} \cite{moca_2004}\par
-MoCA (\textit{Mobile Collaboration Architecture}) é uma arquitetura que oferece recursos para o desenvolvimento de aplicações distribuídas sensíveis ao contexto que envolvem usuários móveis. Esses recursos incluem um serviço para a coleta, armazenamento e distribuição de informações de contexto e um serviço de inferência de localização de dispositivos móveis. Além disso, a arquitetura provê APIs para o desenvolvimento de aplicações que interagem com estes servicos como consumidores de informações de contexto. Os servicos providos pela MoCA livram o programador da obrigação de implementar serviços específicos para a coleta e tratamento de contexto. O conjunto de APIs oferecidas pela MoCA para desenvolvimento de aplicações compreende tres grupos: as APIs de comunicação, que fornecem interfaces de comunicação sícrona e assícrona (baseada em eventos); as APIs principais que fornecem interfaces de comunicação com os serviços básicos da arquitetura; e as APIs opcionais que facilitam o desenvolvimento de aplicações baseadas na arquitetura cliente-servidor.\par
+\textit{MoCA} (\textit{Mobile Collaboration Architecture}) é uma arquitetura que oferece recursos para o desenvolvimento de aplicações distribuídas sensíveis ao contexto que envolvem usuários móveis. Esses recursos incluem um serviço para a coleta, armazenamento e distribuição de informações de contexto e um serviço de inferência de localização de dispositivos móveis. Além disso, a arquitetura provê APIs para o desenvolvimento de aplicações que interagem com estes serviços como consumidores de informações de contexto. Os serviços providos pela \textit{MoCA} livram o programador da obrigação de implementar serviços específicos para a coleta e tratamento de contexto.\par
+O conjunto de APIs oferecidas pela \textit{MoCA} para desenvolvimento de aplicações compreende três grupos: as APIs de comunicação, que fornecem interfaces de comunicação síncrona e assíncrona (componentes de \textit{UI} que utilizam eventos); as APIs principais que fornecem interfaces de comunicação com os serviços básicos da arquitetura; e as APIs opcionais que facilitam o desenvolvimento de aplicações baseadas na arquitetura cliente-servidor.\par
 
-A relação deste trabalho com a arquitetura porposta em MoCA pode ser entendida pelo uso dos estilos arquiteturais \textit{Event Based} e \textit{Cliente Servidor}. Além provê APIs de alto nível para operações de rede, persistência de dados local e notificação do usuário. No entando, MoCa foi construído para trabalhar com um servidor próprio, atendendo requisições específicas de seu domínio, enquanto que esta arquitetura propõe um modelo de comunicação cliente servidor através de serviços \textit{RESTFul}. A tabela a seguir, apresenta as principais características deste trabalho com a arquitetura \textit{MoCA}.
+A relação deste trabalho com a arquitetura proposta em \textit{MoCA} pode ser entendida pelo uso do estilo arquitetural \textit{Event Based}, além provê APIs de alto nível para operações de rede, persistência de dados no dispositivo e notificações do aplicativo. No entando, \textit{MoCa} foi construído para trabalhar com um servidor próprio, atendendo requisições específicas de seu domínio, enquanto que esta arquitetura propõe um modelo de comunicação cliente-servidor através de serviços \textit{RESTFul}. A tabela à seguir, apresenta as principais características deste trabalho com a arquitetura \textit{MoCA}.
 
 \begin{table}[H]
 \small
@@ -46,11 +49,12 @@ A relação deste trabalho com a arquitetura porposta em MoCA pode ser entendida
 \begin{tabular}{|c|c|c|}
 \hline
 Recurso & Este trabalho & MoCA \\ \hline
-\begin{tabular}[c]{@{}c@{}}Provê suporte multiPlataforma\\ mobile Android e iOS\end{tabular} & Sim & Não \\ \hline
-\begin{tabular}[c]{@{}c@{}}Provê suporte a\\ Plataforma Desktop\end{tabular} & Sim & Não \\ \hline
+\begin{tabular}[c]{@{}c@{}}Provê suporte multiplataforma\\ mobile Android e iOS\end{tabular} & Sim & Não \\ \hline
+\begin{tabular}[c]{@{}c@{}}Provê suporte a\\ plataforma desktop\end{tabular} & Sim & Não \\ \hline
 \begin{tabular}[c]{@{}c@{}}Provê recursos extensíveis\\ através de plugins\end{tabular} & Sim & Não \\ \hline
-\begin{tabular}[c]{@{}c@{}}Provê APIs de alto nível para recursos\\ de Rede (HTTP), banco de dados e UI\end{tabular} & Sim & Sim \\ \hline
+\begin{tabular}[c]{@{}c@{}}Provê APIs de alto nível para recursos\\ de rede (HTTP), banco de dados e UI\end{tabular} & Sim & Sim \\ \hline
 \begin{tabular}[c]{@{}c@{}}Provê suporte a\\ reuso de componentes\end{tabular} & Sim & Sim \\ \hline
+\begin{tabular}[c]{@{}c@{}}Provê suporte a\\ comunicação por eventos\end{tabular} & Sim & Sim \\ \hline
 \end{tabular}
 \caption{Tabela comparativa desta arquitetura com \textit{MoCA}.}
 \end{table}
@@ -58,9 +62,10 @@ Recurso & Este trabalho & MoCA \\ \hline
 
 %artigo 3%
 \textbf{Solução Multiplataforma para Smartphone Utilizando os Frameworks SenchaTouch e PhoneGap Integrado à web service Java} \cite{jauridacruzjunior}\par
-O trabalho teve como objetivo principal, realizar análise e estudo sobre as tecnologias de desenvolvimento de aplicativos móveis multiplataforma, utilizando a junção dos frameworks PhoneGap e Sencha Touch. Os aplicativos desenvolvidos usando o PhoneGap são aplicações híbridas onde partes do aplicativo, principalmente a interface do usuário, a lógica da aplicação e a comunicação com um servidor, é baseado em HTML, Javascript e CSS. A outra parte, que se comunica com o sistema operacional do dispositivo é baseada no idioma nativo de cada plataforma, ou seja, \textit{Java} no android e \textit{Objective C} no iOS. O estudo propôs uma modelagem facilitada de integração com outro sistema por meio de serviços web, através de uma aplicação RestFul utilizando Java EE. Com a análise das ferramentas e tecnologias levantadas, pode-se concluir que o desenvolvimento de aplicativos utilizando os frameworks PhoneGap e Sencha Touch tem muitas vantagens. Uma delas é a facilidade de portar o aplicativo para qualquer plataforma móvel. O  PhoneGap dispõe uma arquitetura MVC e diversos componentes para acesso a recursos do dispositivo, como câmera, acelerômetro e GPS através de objetos Javascript. O Sencha Touch dispõe de objetos focado em UI, principalmente suporte a eventos de toque na tela.\par
+O trabalho teve como objetivo principal, realizar análise e estudo sobre as tecnologias de desenvolvimento de aplicativos móveis multiplataforma, utilizando a junção dos frameworks \textit{PhoneGap} e \textit{Sencha Touch}. Os aplicativos desenvolvidos usando o \textit{PhoneGap} são aplicações híbridas onde partes do aplicativo, principalmente a interface do usuário, a lógica da aplicação e a comunicação com um servidor, é baseado em HTML, Javascript e CSS. A outra parte, que se comunica com o sistema operacional do dispositivo é baseada no idioma nativo de cada plataforma, ou seja, \textit{Java} no android e \textit{Objective C} no iOS.\par
+O estudo propôs uma modelagem facilitada de integração com outro sistema por meio de serviços web, através de uma aplicação \textit{RESTFul} utilizando Java EE. Com a análise das ferramentas e tecnologias levantadas, pode-se concluir que o desenvolvimento de aplicativos utilizando os frameworks \textit{PhoneGap} e \textit{Sencha Touch} tem muitas vantagens. Uma delas é a facilidade de portar o aplicativo para qualquer plataforma móvel. O  \textit{PhoneGap} dispõe uma arquitetura \textit{MVC} e diversos componentes para acesso a recursos do dispositivo, como câmera, acelerômetro e GPS através de objetos javascript. O \textit{Sencha Touch} dispõe de objetos focado em UI, principalmente suporte a eventos de toque na tela.\par
 
-O trabalho realizado por Jauri da Cruz Junior se relaciona com esta arquitetura como um estudo comparativo dos recursos provido pelo Qt com o \textit{PhoneGap}. Identificou-se que o \textit{PhoneGap} possui APIs para o \textit{build} do aplicativo nas plataformas mobile e dispõe de uma API de alto nível em javascript para o desenvolvedor utilizar os recursos do dispositivo independente da plataforma. Os recursos podem ser desde a câmera do aparelho as notificações do sistema. No entanto, o \textit{PhoneGap} não possui componentes de interface prontos para serem adicionadas na aplicação. A tabela a seguir, apresenta as principais características deste trabalho com o trabalho de Jauri da Cruz Junior.
+O trabalho realizado por Jauri da Cruz Junior se relaciona com esta arquitetura como um estudo comparativo dos recursos provido pelo Qt com o \textit{PhoneGap}. Identificou-se que o \textit{PhoneGap} possui APIs para o \textit{build} do aplicativo nas plataformas mobile e dispõe de uma API de alto nível em Javascript para o desenvolvedor utilizar os recursos do dispositivo independente da plataforma. Os recursos podem ser desde a câmera do aparelho até notificações do sistema. No entanto, o \textit{PhoneGap} não possui componentes de interface prontos para serem adicionadas na aplicação, por isso no trabalho de Jauri foi utilizado outro framework para composição das telas. A tabela à seguir, apresenta as principais características deste trabalho com o trabalho de Jauri.
 
 \begin{table}[H]
 \small
@@ -69,11 +74,12 @@ O trabalho realizado por Jauri da Cruz Junior se relaciona com esta arquitetura 
 \hline
 \thead{Recurso} & \thead{Este trabalho} & \thead{Trabalho \\ de Jauri} \\
 \hline
-\begin{tabular}[c]{@{}c@{}}Provê suporte multiPlataforma\\ mobile Android e iOS\end{tabular} & Sim & Sim \\ \hline
-\begin{tabular}[c]{@{}c@{}}Provê suporte a\\ Plataforma Desktop\end{tabular} & Sim & Não \\ \hline
+\begin{tabular}[c]{@{}c@{}}Provê suporte multiplataforma\\ mobile Android e iOS\end{tabular} & Sim & Sim \\ \hline
+\begin{tabular}[c]{@{}c@{}}Provê suporte a\\ plataforma desktop\end{tabular} & Sim & Não \\ \hline
 \begin{tabular}[c]{@{}c@{}}Provê recursos extensíveis\\ através de plugins\end{tabular} & Sim & Não \\ \hline
-\begin{tabular}[c]{@{}c@{}}Provê APIs de alto nível para recursos\\ de Rede (HTTP), banco de dados e UI\end{tabular} & Sim & Sim \\ \hline
+\begin{tabular}[c]{@{}c@{}}Provê APIs de alto nível para recursos\\ de rede (HTTP), banco de dados e UI\end{tabular} & Sim & Sim \\ \hline
 \begin{tabular}[c]{@{}c@{}}Provê suporte a\\ reuso de componentes\end{tabular} & Sim & Sim \\ \hline
+\begin{tabular}[c]{@{}c@{}}Provê suporte a\\ comunicação por eventos\end{tabular} & Sim & Sim \\ \hline
 \end{tabular}
 \caption{Tabela comparativa desta arquitetura com a Solução Multiplataforma \textit{PhoneGap}/\textit{SenchaTouch} proposto por Jauri Junior.}
 \end{table}
